🤯 - update react-use-gesture version + litle scroll fix on ios older version

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@
     url(./assets/fonts/Montserrat-Bold.ttf) format("truetype");
 }
 
+html,
 body {
   margin: 0;
   font-family: Montserrat-Regular;
@@ -36,16 +37,19 @@ body {
   -moz-osx-font-smoothing: grayscale;
   min-width: 200;
   overflow: hidden;
+  overscroll-behavior-y: contain;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  position: fixed;
 }
 
 #root {
   overflow-x: hidden;
   overflow-y: auto;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
   position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 p,
